--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm": "6.4.1"
   },
   "scripts": {
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
